syntax= "proto3";

// 導入 google timestamp 包
// import "google/protobuf/timestamp.proto";

package product;

// 服務 - product
service product {
    // 插入接口
    rpc Insert(ProductInfo) returns (StatusReply){}
    rpc Search(ProductInfo) returns (StatusReply){}
    rpc Update(ProductInfo) returns (StatusReply){}
    rpc Delete(ProductInfo) returns (StatusReply){}
}

message ProductInfo {
    // 小駝峰＿
    string productID = 1;
	string brand = 2;
	string name = 3;     
    string old = 4;      
	string label = 5;     
	string color = 6;   
	double sale_Price = 7;  
	double price = 8;
	string size = 9;   
    int32 sum = 10; 
}

// 
message StatusReply {
    int32 code = 1;
    string msg = 2;
    // google.protobuf.Timestamp unix = 3;
}